tdf#142014 Fix displaying strokes when line width is 0

Change-Id: I80e05ff2f24f5da2f5c124c0ee1b302a1c8226ea
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115570
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit 699295ca7cab3a4f4e801a14496f202c05d18899)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115514
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>